updated the comparative table header sticky issue, updated the alignments of text, updated the 'You are All Set' page, updated the coloring of comparative graph

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2942,7 +2942,7 @@ color: #fff;
   line-height: 39px;
   text-align: center;
   color: #000000;
-  margin: 6rem 0 14rem 0;
+  margin: 2rem 0 4rem 0;
 }
 .historical-paraCheckBox {
   margin: 0;
